@@ -436,6 +436,9 @@ Release 2.4.0 - UNRELEASED
     YARN-1789. ApplicationSummary does not escape newlines in the app name
     (Tsuyoshi OZAWA via jlowe)
 
+    YARN-1830. Fixed TestRMRestart#testQueueMetricsOnRMRestart failure due to
+    race condition when app is submitted. (Zhijie Shen via jianhe)
+
 Release 2.3.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
